; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_avr.c_check_buffer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_avr.c_check_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @check_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_buffer(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @r_buf_size(i32* %4)
  %6 = icmp slt i32 %5, 32
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @rjmp(i32* %9, i32 0)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @check_buffer_jmp(i32* %13)
  store i32 %14, i32* %2, align 4
  br label %18

15:                                               ; preds = %8
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @check_buffer_rjmp(i32* %16)
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %15, %12, %7
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @r_buf_size(i32*) #1

declare dso_local i32 @rjmp(i32*, i32) #1

declare dso_local i32 @check_buffer_jmp(i32*) #1

declare dso_local i32 @check_buffer_rjmp(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
